Fixed syllabus table overflow and added custom BALCO scrollbar

--- a/public/css/syllabus.css
+++ b/public/css/syllabus.css
@@ -325,7 +325,7 @@ border:1px solid rgba(0,114,206,0.12);
 
 .table-box{
 
-    width:85%;
+    width:90%;
 
     margin:40px auto 0;
 
@@ -347,7 +347,7 @@ border:1px solid rgba(0,114,206,0.12);
 
     border-collapse:collapse;
 
-    min-width:1100px;
+    min-width:1000px;
 }
 
 .syllabus-table thead{
